# soperator

./: .arcignore  .codespellrc  .dockerignore  .editorconfig  .gitignore  .golangci.yaml  .mockery.yaml  AGENTS.md  BUILD  CODEOWNERS  Dockerfile  LICENSE  Makefile  PROJECT  README.md  SECURITY.md  VERSION  checkscontroller.dockerfile  go.mod  go.sum  rebooter.dockerfile  release-helm  release_all.sh  release_helm.sh  release_terraform.sh  sconfigcontroller.dockerfile  soperatorchecks.dockerfile  terraform.example.tfvars  terraform_release.sh  tfoldbius.sh  upload_to_build_agent.sh
.config/: ansible-lint.yml
.github/: auto_assign.yml  branch-config.json  branch-config.yaml  dependabot.yml  pull_request_template.md
ansible/: .gitignore  README.md  ansible.cfg  common-packages.yml  dcgmi.yml  docker-cli.yml  gdrcopy.yml  (+16 more)
images/common/spank-nccl-debug/: .clang-format  CMakeLists.txt  Makefile  README.md
images/common/spank-nccl-debug/docker/: base.dockerfile  builder.dockerfile  headers.dockerfile
images/common/spank-nccl-debug/src/: snccld.c  snccld.h  snccld_args.h  snccld_enroot.h  snccld_log.h  snccld_mkdir.h  snccld_nccl.h  snccld_state.c  snccld_state.h  snccld_util_antidupl.h  snccld_util_dir.h  snccld_util_dir_file.c  snccld_util_dir_file.h  snccld_util_host.c  snccld_util_host.h  snccld_util_oplock.c  snccld_util_oplock.h  snccld_util_string.c  snccld_util_string.h
internal/controller/clustercontroller/: BUILD  BUILD.bazel  accounting.go  benchmark.go  cluster_accounting.go  cluster_benchmark.go  cluster_common.go  cluster_node_controller.go  cluster_node_login.go  cluster_node_worker.go  common.go  controller.go  exporter.go  indexfield.go  login.go  node_common.go  node_controller.go  node_database.go  node_login.go  node_worker.go  populate_job.go  populate_job_test.go  reconcile.go  reconcile_external.go  rest.go  sconfigcontroller.go  slurmcluster_controller.go  soperator_exporter.go  watch_namespaces.go  worker.go
(+1656 files in other folders)
