load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "clustercontroller",
    srcs = ["slurmcluster_controller.go"],
    importpath = "nebius.ai/slurm-operator/internal/controller/clustercontroller",
    visibility = ["//msp/slurm-service:__subpackages__"],
    deps = [
        "//msp/slurm-service/internal/operator/api/v1:api",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/client",
        "@io_k8s_sigs_controller_runtime//pkg/log",
    ],
)
